ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/ROI_Master__c.object-meta.xml
<CustomObject>
    <label>ROI Master</label>
    <nameField>
        <label>ROI Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROI Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>