ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>