ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max_Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>