ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min_Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>