ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIENDBIKE</fullName>
            </value>
            <value>
                <fullName>ESCOOTER</fullName>
            </value>
            <value>
                <fullName>HISTREET</fullName>
            </value>
            <value>
                <fullName>TWO_WHEELER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>