ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Tenure_Min__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Min__c</fullName>
    <label>Tenure_Min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>