ProdIND/ProdPrograms/force-app/main/default/objects/ROI_Master__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle_Category</label>
    <length>4</length>
    <type>Text</type>
</CustomField>